# opensheet-core

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  fuzz.yml  release.yml
benchmarks/: bench_read.py  bench_visualize.py  bench_write.py
docs/: benchmarks.md  migration-from-openpyxl.md
examples/: README.md  fastapi_download.py  flask_download.py
python/opensheet_core/: __init__.py  _native.pyi  langchain.py  llamaindex.py
src/: lib.rs  types.rs
src/reader/: xlsx.rs
src/writer/: xlsx.rs
tests/: test_langchain.py  test_llamaindex.py  test_xlsx_reader.py  test_xlsx_writer.py
tests/fixtures/: basic.xlsx
