[package]
name = "opensheet-core"
version = "0.2.1"
edition = "2021"
description = "A fast, memory-efficient spreadsheet I/O core"
license = "MIT"

[lib]
name = "opensheet_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = "0.28"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
