[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "opensheet-core"
version = "0.1.0"
description = "A fast, memory-efficient spreadsheet I/O library for Python, powered by Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "0xNadr", email = "hi@nader.info" },
]
maintainers = [
    { name = "0xNadr", email = "hi@nader.info" },
]
keywords = ["xlsx", "excel", "spreadsheet", "streaming", "rust", "pyo3", "openpyxl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/0xNadr/opensheet-core"
Repository = "https://github.com/0xNadr/opensheet-core"
Issues = "https://github.com/0xNadr/opensheet-core/issues"
Changelog = "https://github.com/0xNadr/opensheet-core/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "openpyxl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["opensheet_core"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "opensheet_core._native"
